Terraform-Variables-Details/Terraform-for-AWS-II/AWS-RDS/createinstance.tf

resource "aws_key_pair" "levelup_key" {
	key_name = "levelup_key"
	public_key = file(var.PATH_TO_PUBLIC_KEY)
}

resource "aws_instance" "MyterraformInstance" {
	ami 			= lookup(var.AMIS, var.AWS_REGION)
	instance_type   = "t3.micro"
	availability_zone = "us-east-2a"
	key_name = aws_key_pair.levelup_key.key_name

	vpc_security_group_ids = [aws_security_group.allow-levelup-ssh.id]
	subnet_id = aws_subnet.levelupvpc-public-2.id

	tags = {
		Name = "my_custom_instance"
	}
}
